ex5/y.output
Grammar

    0 $accept: sentence $end

    1 sentence: simple_sentence
    2         | compound_sentence

    3 simple_sentence: subject verb object
    4                | subject verb object prep_phrase

    5 compound_sentence: simple_sentence CONJUNCTION simple_sentence
    6                  | compound_sentence CONJUNCTION simple_sentence

    7 subject: NOUN
    8        | PRONOUN
    9        | ADJECTIVE subject

   10 verb: VERB
   11     | ADVERB VERB
   12     | verb VERB

   13 object: NOUN
   14       | ADJECTIVE object

   15 prep_phrase: PREPOSITION NOUN


Terminals, with rules where they appear

$end (0) 0
error (256)
NOUN (258) 7 13 15
PRONOUN (259) 8
VERB (260) 10 11 12
ADVERB (261) 11
ADJECTIVE (262) 9 14
PREPOSITION (263) 15
CONJUNCTION (264) 5 6


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
sentence (11)
    on left: 1 2, on right: 0
simple_sentence (12)
    on left: 3 4, on right: 1 5 6
compound_sentence (13)
    on left: 5 6, on right: 2 6
subject (14)
    on left: 7 8 9, on right: 3 4 9
verb (15)
    on left: 10 11 12, on right: 3 4 12
object (16)
    on left: 13 14, on right: 3 4 14
prep_phrase (17)
    on left: 15, on right: 4


State 0

    0 $accept: . sentence $end

    NOUN       shift, and go to state 1
    PRONOUN    shift, and go to state 2
    ADJECTIVE  shift, and go to state 3

    sentence           go to state 4
    simple_sentence    go to state 5
    compound_sentence  go to state 6
    subject            go to state 7


State 1

    7 subject: NOUN .

    $default  reduce using rule 7 (subject)


State 2

    8 subject: PRONOUN .

    $default  reduce using rule 8 (subject)


State 3

    9 subject: ADJECTIVE . subject

    NOUN       shift, and go to state 1
    PRONOUN    shift, and go to state 2
    ADJECTIVE  shift, and go to state 3

    subject  go to state 8


State 4

    0 $accept: sentence . $end

    $end  shift, and go to state 9


State 5

    1 sentence: simple_sentence .
    5 compound_sentence: simple_sentence . CONJUNCTION simple_sentence

    CONJUNCTION  shift, and go to state 10

    $default  reduce using rule 1 (sentence)


State 6

    2 sentence: compound_sentence .
    6 compound_sentence: compound_sentence . CONJUNCTION simple_sentence

    CONJUNCTION  shift, and go to state 11

    $default  reduce using rule 2 (sentence)


State 7

    3 simple_sentence: subject . verb object
    4                | subject . verb object prep_phrase

    VERB    shift, and go to state 12
    ADVERB  shift, and go to state 13

    verb  go to state 14


State 8

    9 subject: ADJECTIVE subject .

    $default  reduce using rule 9 (subject)


State 9

    0 $accept: sentence $end .

    $default  accept


State 10

    5 compound_sentence: simple_sentence CONJUNCTION . simple_sentence

    NOUN       shift, and go to state 1
    PRONOUN    shift, and go to state 2
    ADJECTIVE  shift, and go to state 3

    simple_sentence  go to state 15
    subject          go to state 7


State 11

    6 compound_sentence: compound_sentence CONJUNCTION . simple_sentence

    NOUN       shift, and go to state 1
    PRONOUN    shift, and go to state 2
    ADJECTIVE  shift, and go to state 3

    simple_sentence  go to state 16
    subject          go to state 7


State 12

   10 verb: VERB .

    $default  reduce using rule 10 (verb)


State 13

   11 verb: ADVERB . VERB

    VERB  shift, and go to state 17


State 14

    3 simple_sentence: subject verb . object
    4                | subject verb . object prep_phrase
   12 verb: verb . VERB

    NOUN       shift, and go to state 18
    VERB       shift, and go to state 19
    ADJECTIVE  shift, and go to state 20

    object  go to state 21


State 15

    5 compound_sentence: simple_sentence CONJUNCTION simple_sentence .

    $default  reduce using rule 5 (compound_sentence)


State 16

    6 compound_sentence: compound_sentence CONJUNCTION simple_sentence .

    $default  reduce using rule 6 (compound_sentence)


State 17

   11 verb: ADVERB VERB .

    $default  reduce using rule 11 (verb)


State 18

   13 object: NOUN .

    $default  reduce using rule 13 (object)


State 19

   12 verb: verb VERB .

    $default  reduce using rule 12 (verb)


State 20

   14 object: ADJECTIVE . object

    NOUN       shift, and go to state 18
    ADJECTIVE  shift, and go to state 20

    object  go to state 22


State 21

    3 simple_sentence: subject verb object .
    4                | subject verb object . prep_phrase

    PREPOSITION  shift, and go to state 23

    $default  reduce using rule 3 (simple_sentence)

    prep_phrase  go to state 24


State 22

   14 object: ADJECTIVE object .

    $default  reduce using rule 14 (object)


State 23

   15 prep_phrase: PREPOSITION . NOUN

    NOUN  shift, and go to state 25


State 24

    4 simple_sentence: subject verb object prep_phrase .

    $default  reduce using rule 4 (simple_sentence)


State 25

   15 prep_phrase: PREPOSITION NOUN .

    $default  reduce using rule 15 (prep_phrase)
